Header and footer version for the mobile based on iphone8 version are ready. Display for smartphones with smaller screen still needs to be fixed. Also fixed a display problem for desktop version. Realized the design was not responsive enough for desktop version. Some details are still to be set again.

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -28,26 +28,32 @@
  header #logo {
      display: flex;
      align-items: flex-end;
-     height: 30px;
+     height: 40px;
+     width: 30%;
      order: 1;
  }
  
  #sign_in {
      display: flex;
-     height: 30px;
+     height: 40px;
+     width: 20%;
      align-items: center;
      order: 2;
      color: #0065fc;
+     font-weight: bold;
+     font-size: 10pt;
  }
  
  header nav {
      display: flex;
+     width: 90%;
      padding-top: 20px;
      order: 3;
  }
  
  header nav ul {
      display: flex;
+     width: 110%;
      justify-content: space-between;
      list-style-type: none;
  }
@@ -60,8 +66,9 @@
  #border {
      border-bottom: 3px solid #0065fc;
      width: 187px;
-     height: 45px;
+     height: 30px;
      margin-left: -60px;
+     font-size: 10pt;
  }
  
  #border a {
@@ -75,7 +82,159 @@
      color: black;
      border-bottom: 3px solid #F2F2F2;
      width: 187px;
-     height: 45px;
+     height: 30px;
+     font-size: 10pt;
+ }
+ /* main */
+ 
+ main {
+     width: 90%;
+     margin: auto;
+ }
+ 
+ h1 {
+     display: flex;
+     font-size: 16pt;
+     width: 300px;
+ }
+ 
+ h2 {
+     font-size: 11.7pt;
+     font-weight: normal;
+     width: 300px;
+     height: 20px;
+     ;
+ }
+ /* Search */
+ 
+ #search_form {
+     display: flex;
+     align-items: center;
+     margin-top: 25px;
+     width: 100%;
+ }
+ 
+ #search_form form {
+     display: flex;
+     height: 50px;
+ }
+ 
+ .fa-map-marker-alt {
+     width: 48px;
+     height: 48px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     ;
+     background-color: #F2F2F2;
+     border: 1px solid #F2F2F2;
+     border-bottom-left-radius: 15px;
+     border-top-left-radius: 15px;
+     ;
+ }
+ 
+ #city {
+     padding-left: 20px;
+     font-weight: bold;
+     height: 46px;
+     width: 75%;
+     border: 1px solid #F2F2F2;
+     border-right: hidden;
+ }
+ 
+ #city::placeholder {
+     opacity: 1;
+ }
+ 
+ #city:placeholder-shown {
+     color: black;
+     font-size: 1em;
+ }
+ 
+ #search_city {
+     display: none;
+ }
+ 
+ .fa-search {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     width: 48px;
+     height: 48px;
+     border: 1px solid #0065fc;
+     border-radius: 15px;
+     background-color: #0065fc;
+     color: white;
+     margin-left: -12px;
+ }
+ 
+ #filters_form {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     height: 240px;
+     margin-top: 30px;
+ }
+ 
+ #filters_form p {
+     display: flex;
+     width: 200px;
+     font-weight: bold;
+ }
+ 
+ .filters {
+     display: flex;
+     justify-content: flex-start;
+     align-items: center;
+     height: 46px;
+     border: 2px solid #d9d9d9;
+     border-radius: 25px;
+     border-left: hidden;
+     margin-right: 10px;
+     padding-right: 15px;
+     font-size: 0.8em;
+     font-weight: bolder;
+     color: black;
+     margin-top: 1%;
+ }
+ 
+ .fa-money-bill-wave,
+ .fa-child,
+ .fa-heart,
+ .fa-dog {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     color: #0065fc;
+     width: 50px;
+     height: 48px;
+     border: 1px solid #DEEBFF;
+     border-radius: 25px;
+     background-color: #DEEBFF;
+     margin-right: 10px;
+     font-size: 17px;
+ }
+ 
+ .fa-info {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     height: 25px;
+     width: 35px;
+     border-radius: 12.5px;
+     border: 1px solid #d9d9d9;
+     color: #0065fc;
+     margin-right: 12px;
+     font-size: 10pt;
+     margin-top: -5px;
+ }
+ 
+ #info {
+     display: flex;
+     height: 42px;
+     justify-content: center;
+     margin-top: 35px;
+     font-size: 1em;
  }
  /* footer */
  
